--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /target/classes/program75 w comments
 /target/classes/program100 w comments
 /target/classes/program150 w comments
+.settings/org.eclipse.core.resources.prefs
