--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 *.class
 *.properties
 target/classes/META-INF/maven/operating.systems.internals/DecimalMachine/pom.properties
+target/classes/META-INF/maven/operating.systems.internals/DecimalMachine/pom.properties
